# docs/swagger.json
@@ -47,8 +47,56 @@
         "tags": [
           "Contacts"
         ],
-        "summary": "Get contactlist",
-        "operationId": "getAllContacts",
+        "summary": "Get list of contacts",
+        "operationId": "getContacts",
+        "description": "Get list of users with this endpoint",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "page",
+            "schema": {
+              "type": "integer"
+            },
+            "example": 1
+          },
+          {
+            "in": "query",
+            "name": "perPage",
+            "schema": {
+              "type": "integer",
+              "example": 10
+            }
+          },
+          {
+            "in": "query",
+            "name": "sortBy",
+            "schema": {
+              "type": "string",
+              "example": "name"
+            },
+            "description": "All contacts's fields can be mentioned. Default value - _id"
+          },
+          {
+            "in": "query",
+            "name": "sortOrder",
+            "schema": {
+              "type": "string",
+              "enum": [
+                "asc",
+                "desc"
+              ],
+              "example": "asc"
+            }
+          },
+          {
+            "in": "query",
+            "name": "isFavourite",
+            "schema": {
+              "type": "boolean",
+              "example": false
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Successfully found contacts!",
@@ -85,7 +133,7 @@
                         "data": {
                           "type": "array",
                           "items": {
-                            "$ref": "#/paths/~1contacts/post/requestBody/content/application~1json/schema"
+                            "$ref": "#/paths/~1contacts/post/requestBody/content/multipart~1form-data/schema"
                           }
                         },
                         "page": {
@@ -160,7 +208,7 @@
         "requestBody": {
           "required": true,
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
                 "type": "object",
                 "properties": {
@@ -230,7 +278,7 @@
                     },
                     "data": {
                       "type": "object",
-                      "$ref": "#/paths/~1contacts/post/requestBody/content/application~1json/schema"
+                      "$ref": "#/paths/~1contacts/post/requestBody/content/multipart~1form-data/schema"
                     }
                   }
                 }
@@ -290,7 +338,7 @@
                     },
                     "data": {
                       "type": "object",
-                      "$ref": "#/paths/~1contacts/post/requestBody/content/application~1json/schema"
+                      "$ref": "#/paths/~1contacts/post/requestBody/content/multipart~1form-data/schema"
                     }
                   }
                 }
@@ -352,7 +400,7 @@
         "requestBody": {
           "required": true,
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
                 "type": "object",
                 "properties": {
@@ -416,7 +464,7 @@
                     },
                     "data": {
                       "type": "object",
-                      "$ref": "#/paths/~1contacts/post/requestBody/content/application~1json/schema"
+                      "$ref": "#/paths/~1contacts/post/requestBody/content/multipart~1form-data/schema"
                     }
                   }
                 }
@@ -472,9 +520,9 @@
         "tags": [
           "Auth"
         ],
-        "summary": "Register User",
-        "operationId": "registerUser",
-        "description": "Register a new user to the system",
+        "summary": "User Registration",
+        "operationId": "RegisterUser",
+        "description": "User Registration",
         "security": [
           {
             "bearerAuth": []
@@ -482,29 +530,23 @@
         ],
         "requestBody": {
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
                 "type": "object",
                 "required": [
                   "name",
-                  "email",
-                  "password"
+                  "email"
                 ],
                 "properties": {
                   "name": {
-                    "description": "User full name",
+                    "description": "name",
                     "type": "string",
                     "example": "John Doe"
                   },
                   "email": {
-                    "description": "User email address",
+                    "description": "email",
                     "type": "string",
-                    "example": "john.doe@gmail.com"
-                  },
-                  "password": {
-                    "description": "User password",
-                    "type": "string",
-                    "example": "password123"
+                    "example": "example@mail.com"
                   }
                 }
               }
@@ -534,24 +576,16 @@
                     },
                     "data": {
                       "type": "object",
-                      "required": [
-                        "name",
-                        "email",
-                        "password"
-                      ],
                       "properties": {
                         "name": {
-                          "description": "name",
                           "type": "string",
                           "example": "John Doe"
                         },
                         "email": {
-                          "description": "email",
                           "type": "string",
                           "example": "example@mail.com"
                         },
                         "password": {
-                          "description": "password",
                           "type": "string",
                           "example": "password123"
                         }
@@ -606,7 +640,7 @@
         "requestBody": {
           "required": true,
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
                 "type": "object",
                 "required": [
@@ -821,7 +855,7 @@
         ],
         "requestBody": {
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
                 "type": "object",
                 "required": [
@@ -893,9 +927,6 @@
               }
             }
           },
-          "409": {
-            "$ref": "#/paths/~1auth~1register/post/responses/409"
-          },
           "500": {
             "description": "Bad request",
             "content": {
@@ -951,7 +982,7 @@
         ],
         "requestBody": {
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
                 "type": "object",
                 "required": [
